# open.mp-anticheat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  anticheat.cfg  bootstrap.sh  pawn.json
.github/workflows/: release.yml
pawn/: anticheat.inc
src/: ac_types.hpp  anticheat_component.cpp  anticheat_component.hpp  config.cpp  config.hpp  enforcement.cpp  enforcement.hpp  main.cpp  natives.cpp  natives.hpp  player_data.hpp  scheduler.cpp  scheduler.hpp
src/detection/: faker5_check.cpp  faker5_check.hpp  memory_check.cpp  memory_check.hpp  mobile_check.cpp  mobile_check.hpp  module.hpp  poison_check.cpp  poison_check.hpp  raknet_check.cpp  raknet_check.hpp  scc_check.cpp  scc_check.hpp  signatures.hpp  version_check.cpp  version_check.hpp
test/: ac_test.pwn
